syntax = "proto3";

package auth;

service AuthService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse);
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserPermissionsRequest {
  string userId = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  bool isActive = 6;
  int64 createdAt = 7;
  int64 updatedAt = 8;
}

message GetUserPermissionsResponse {
  string userId = 1;
  repeated string permissions = 2;
  string role = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string role = 3;
  repeated string permissions = 4;
}
